<resources>
    <string name="app_name">HollywoodCelebritiesDatabase</string>
    <string name="hollywood_celebrities_app">Hollywood Celebrities App</string>
    <string name="add_a_celebrity">Add a Celebrity</string>
    <string name="view_all_celebrities">View All Celebrities</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_celebrity">Add Celebrity</string>
    <string name="update_celebrity">Update Celebrity</string>
    <string name="go_to_home">Go to Home</string>
    <string name="save_data_to_a_file">Save Data to a File</string>
    <string name="read_data_from_a_file">Read Data From a File</string>
</resources>
