<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGreen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHollywoodTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hollywood_celebrities_app"
        style="@style/StandardTitleStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivHollywood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hollywood"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHollywoodTitle" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivHollywood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnAddCelebrity"
            android:text="@string/add_a_celebrity"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick" />

        <Button
            android:id="@+id/btnViewAllCelebrities"
            android:text="@string/view_all_celebrities"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick" />

        <Button
            android:id="@+id/btnDisplayFavorites"
            android:text="Display Favorite Celebrities"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick" />

        <Button
            android:id="@+id/btnFileIO"
            android:text="File Input/Output Storage"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>